--- a/Cloud Computing Final Project/index.html
+++ b/Cloud Computing Final Project/index.html
@@ -79,6 +79,6 @@
       </footer>
     </main>
   </div>
-  <script src="MainScript.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
