fixed image issue (Hopefully)

--- a/Cloud Computing Final Project/index.html
+++ b/Cloud Computing Final Project/index.html
@@ -39,7 +39,7 @@
         <h2>Welcome</h2>
       <div class="intro-flex">
       <div class="profile-image">
-        <img src="Cloud Computing Final Project\Resources\Photos\IMG_20251017_160713 (1).jpg" alt="Profile photo of Joel Bowman" />
+        <img src="Resources/Photos/IMG_20251017_160713 (1).jpg" alt="Profile photo of Joel Bowman" />
       </div>
       <div class="intro-text">
         <p>Hello! I’m Joel Bowman, a Computer Science student at UW–Green Bay with a Software Engineering emphasis and a minor in Business Administration. I’m passionate about building scalable systems, responsive design, and integrating business strategy into technical solutions.</p>
